<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryLight">


        <RelativeLayout
            android:id="@+id/rl_expense_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/bg_card"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:elevation="6dp"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_action_type_btns"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                tools:visibility="visible">

                <Button
                    android:id="@+id/btn_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_btn_bg"
                    android:drawableStart="@drawable/ic_add_shopping_cart_white_24dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/btn_expense"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/selector_btn_bg"
                    android:drawableStart="@drawable/ic_archive_white_24dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/btn_income"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_new_action"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    android:text="@string/label_new_income" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_sum"
                    style="@style/Widget.CoinSpace.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/lbl_sum">

                    <EditText
                        android:id="@+id/et_sum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:maxLength="13"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/input_layout_sum"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_currency_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/tv_currency_label" />

                    <Spinner
                        android:id="@+id/currency_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp" />

            </RelativeLayout>

        </RelativeLayout>

</RelativeLayout>
